# agent

./: .env.example  .gitignore  CLAUDE.md  docker-compose.prod.yml  docker-compose.yml  probe_r2.py  pyproject.toml
.claude/commands/: verify.md
alembic/versions/: 0001_initial.py  0003_pending_actions.py  0004_scheduled_posts.py  0005_content_plan.py  0006_content_plan_draft.py
clients/: user_helper.py  wiring.py
clients/api/: dependencies.py  error_handlers.py  main.py
clients/telegram/: __main__.py  bot.py  formatters.py  handlers.py
core/: config.py  engine.py  exceptions.py  logging.py  schemas.py  timeutil.py
core/llm/: base.py  openai_provider.py
core/memory/: episodic.py  manager.py  semantic.py  working.py
core/notifications/: telegram_notifier.py
core/planner/: base.py  react.py
core/scheduler/: jobs.py
core/tools/: registry.py
docs/: APPROVAL_FLOW_DESIGN.md  ARCHITECTURE.md  DB_SCHEMA.md  DIARY.md
docs/adr/: ADR-002-job-runner.md  ADR-003-reverse-proxy.md  ADR-004-llm-api.md
infra/worker/: worker_settings.py
integrations/: instagram.py
models/: __init__.py  content_plan.py  memory.py  pending_action.py  plugin_registry.py  project.py  reminder.py  scheduled_post.py  task.py  user.py
platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
plugins/: base.py
plugins/approval_test/: plugin.py
plugins/build_content_plan/: approve.py  cancel.py  discard.py  edit.py  list.py  plugin.py  render.py  schemas.py
plugins/file_reader/: plugin.py
plugins/instagram_carousel/: plugin.py  schemas.py
plugins/instagram_post/: plugin.py  schemas.py
plugins/reminders/: cancel.py  list.py  plugin.py  schemas.py
plugins/schedule_post/: cancel.py  list.py  plugin.py  schemas.py
plugins/tasks/: complete.py  create.py  list.py  schemas.py
plugins/web_search/: plugin.py
tests/: conftest.py
tests/clients/: test_api_routes.py  test_callback_handler.py  (+5 more)
(+104 files in other folders)
