[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "platform"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    # Database
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pgvector>=0.3",
    "alembic>=1.13",
    # Redis / job runner
    "redis>=5.0",
    "arq>=0.26",
    # LLM
    "openai>=1.50",
    # Config / validation
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    # HTTP client
    "httpx>=0.27",
    # Logging
    "structlog>=24.0",
    # Retry
    "tenacity>=8.3",
    # Telegram client
    "aiogram>=3.10",
    # CLI
    "typer>=0.12",
    # Timezone database (required by zoneinfo on Windows and slim Linux containers)
    "tzdata>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
    "black>=24.0",
    "mypy>=1.10",
    "types-redis",
    "testcontainers>=4.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["alembic.*", "alembic.env", "alembic.versions.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["models.base"]
disable_error_code = ["unused-ignore"]

[[tool.mypy.overrides]]
module = ["env", "versions.*", "0001_initial", "0002_hnsw_index"]
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "plugins*", "integrations*", "clients*", "models*"]
